--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-streamlit==1.31.0
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-requests==2.31.0
-python-dotenv==1.0.0
-langchain==0.1.0
-langchain-anthropic==0.1.0
-anthropic==0.8.0
-tavily-python==0.3.0
-playwright==1.40.0
-pydantic==2.5.0
+streamlit
+fastapi
+uvicorn[standard]
+requests
+python-dotenv
+langchain
+langchain-anthropic
+anthropic
+tavily-python
+playwright
+pydantic
